--- a/09-note-project/package.json
+++ b/09-note-project/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^9.2.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
