--- a/11-nextjs-hooks/package.json
+++ b/11-nextjs-hooks/package.json
@@ -14,8 +14,11 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.24",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.6"
+    "eslint-config-next": "16.1.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
