--- a/13-server-action-project/package.json
+++ b/13-server-action-project/package.json
@@ -18,6 +18,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.575.0",
+    "mongoose": "^9.2.3",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
